[gd_scene load_steps=5 format=3 uid="uid://j60fiewfup26"]

[ext_resource type="Script" path="res://Shop/shop_item_panel.gd" id="1_00dhx"]
[ext_resource type="LabelSettings" uid="uid://ddlppfp33dpu1" path="res://cutscenes/a_bit_bigger_than_even_smaller_font.tres" id="1_862oa"]
[ext_resource type="LabelSettings" uid="uid://wblyhtrwvirh" path="res://cutscenes/even_smaller_font.tres" id="2_qe7wl"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6e80g"]
load_path = "res://.godot/imported/EmptySlot.png-181bd45cb7559e750d8d950b90545f67.ctex"

[node name="ShopItemPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -780.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_00dhx")

[node name="Grid" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="NameRaw" type="HBoxContainer" parent="Grid"]
layout_mode = 2
alignment = 1

[node name="ItemName" type="Label" parent="Grid/NameRaw"]
unique_name_in_owner = true
layout_mode = 2
text = "Cylinder Hat
"
label_settings = ExtResource("1_862oa")

[node name="SlotRarityRow" type="HBoxContainer" parent="Grid"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Grid/SlotRarityRow"]
layout_mode = 2

[node name="Slot" type="Label" parent="Grid/SlotRarityRow/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Head Piece
"
label_settings = ExtResource("2_qe7wl")
autowrap_mode = 2

[node name="Rarity" type="Label" parent="Grid/SlotRarityRow/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ", COMMON
"
label_settings = ExtResource("2_qe7wl")

[node name="ButtonTextureRow" type="HBoxContainer" parent="Grid"]
layout_mode = 2
alignment = 1

[node name="BuyButton" type="TextureButton" parent="Grid/ButtonTextureRow"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_6e80g")

[node name="PriceRow" type="HBoxContainer" parent="Grid"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Price" type="Label" parent="Grid/PriceRow"]
unique_name_in_owner = true
layout_mode = 2
text = "12500"
label_settings = ExtResource("1_862oa")

[node name="Currency" type="Label" parent="Grid/PriceRow"]
unique_name_in_owner = true
layout_mode = 2
text = "TICKETS"
label_settings = ExtResource("1_862oa")
